<resources>
    <string name="app_name">ProductDatabase</string>
    <string name="product_id">Product ID</string>
    <string name="not_assigned">Not Assigned</string>
    <string name="product_name">Product Name</string>
    <string name="add_text">Add</string>
    <string name="find_text">Find</string>
    <string name="delete_text">Delete</string>
    <string name="product_quantity">Product Quantity</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="add">Add</string>
    <string name="find">Find</string>
    <string name="asc">Asc</string>
    <string name="desc">Desc</string>
    <string name="name">Name</string>
    <string name="phone">999.999.9999</string>
    <string name="delete">delete</string>
</resources>